--- a/platform-resources_eng/src/messages/IdeBundle.properties
+++ b/platform-resources_eng/src/messages/IdeBundle.properties
@@ -396,6 +396,7 @@ command.go.to.line=Go to Line
 action.hide.all.windows=Hide All _Windows
 action.restore.windows=Restore _Windows
 message.settings.imported.successfully=Settings imported successfully. You have to restart {0} to reload the settings.\nShutdown {1}?
+message.settings.imported.successfully.restart=Settings imported successfully. You have to restart {0} to reload the settings.\nRestart {1}?
 title.restart.needed=Restart Needed
 title.import.file.location=Import File Location
 prompt.choose.import.file.path=Select the settings file to import or directory where the file is located
