FileBasedIndex receives non-null getProject() in all queries

--- a/plugins/properties/src/META-INF/plugin.xml
+++ b/plugins/properties/src/META-INF/plugin.xml
@@ -51,9 +51,11 @@
     <fileEditorProvider implementation="com.intellij.lang.properties.editor.ResourceBundleEditorProvider"/>
   </extensions>
 
-  <application-components>
+  <project-components>
     <component>
       <implementation-class>com.intellij.lang.properties.PropertiesFilesManager</implementation-class>
+      <skipForDefaultProject/>
+      <skipForDummyProject/>
     </component>
-  </application-components>
+  </project-components>
 </idea-plugin>
