multiline Flip Setter Call

--- a/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
+++ b/plugins/IntentionPowerPak/src/com/siyeh/IntentionPowerPackBundle.properties
@@ -120,7 +120,7 @@ replace.concatenation.with.format.string.intention.family.name=Replace String Co
 copy.concatenated.string.to.clipboard.intention.name=Copy String concatenation text to the clipboard
 copy.concatenated.string.to.clipboard.intention.family.name=Copy String Concatenation Text to the Clipboard
 flip.expression.intention.family.name=Flip Binary Expression
-flip.setter.call.intention.family.name=Flip Setter Call
+flip.setter.call.intention.family.name=Flip Setter Call(s)
 
 #hand made
 demorgans.intention.name1=Replace '\\&\\&' with '||'
