debugger tooltip - non-automatic mode

--- a/platform-resources_eng/src/messages/ActionsBundle.properties
+++ b/platform-resources_eng/src/messages/ActionsBundle.properties
@@ -777,6 +777,9 @@ action.XDebugger.AddToWatches.text=Add to Watches
 action.XDebugger.RemoveWatch.text=Remove Watch
 action.XDebugger.NewWatch.text=New Watch...
 action.XDebugger.EditWatch.text=Edit...
+action.XDebugger.AutoTooltip.text=Value Auto Tooltip
+action.XDebugger.AutoTooltip.description=Toggles if value tooltip is shown automatically on mouse over
+group.XDebugger.settings.text=Settings
 
 action.Debugger.AdjustArrayRange.text=Adjust Range...
 action.Debugger.Inspect.text=Inspect
