--- a/resources_eng/src/messages/DebuggerBundle.properties
+++ b/resources_eng/src/messages/DebuggerBundle.properties
@@ -176,6 +176,8 @@ base.renderer.configurable.display.name=Data Views
 label.base.renderer.configurable.autoscroll=Autoscroll to new &local variables
 label.base.renderer.configurable.show.synthetic.fields=S&ynthetic fields
 label.base.renderer.configurable.sort.alphabetically=Sort a&lphabetically
+label.base.renderer.configurable.autoTooltip=Auto &tooltips for values
+label.base.renderer.configurable.autoTooltip.description=If disabled, use "{0}" to show/hide tooltips
 label.base.renderer.configurable.hide.null.array.elements=Hide &null array elements
 label.base.renderer.configurable.show.static.fields=&Static fields
 label.base.renderer.configurable.show.static.final.fields=Static &final fields
