git4idea: IDEADEV-34937: .gitignore is now declared as text file

--- a/plugins/git4idea/src/META-INF/plugin.xml
+++ b/plugins/git4idea/src/META-INF/plugin.xml
@@ -103,6 +103,7 @@
         serviceInterface="git4idea.rebase.GitRebaseEditorService"
         serviceImplementation="git4idea.rebase.GitRebaseEditorService"/>
     <ComponentRoamingType component="Git.Settings" type="DISABLED"/>
+    <fileTypeFactory implementation="git4idea.vfs.GitFileTypeFactory"/>
   </extensions>
 
 </idea-plugin>
