--- a/platform-resources_eng/src/messages/FindBundle.properties
+++ b/platform-resources_eng/src/messages/FindBundle.properties
@@ -68,7 +68,7 @@ find.all.button=Find &All
 find.text.to.find.label=&Text to find:
 find.replace.with.label=&Replace with:
 find.filter.file.name.group=File name filter
-find.filter.file.mask.checkbox=File &mask
+find.filter.file.mask.checkbox=File &mask(s)
 find.directory.not.found.error=Directory {0} is not found
 find.invalid.regular.expression.error=Bad pattern \"{0}\": {1}
 find.empty.match.regular.expression.error=Regular expression matches empty string
