Enhance quick doc generation; copy inherited docs for overridden methods. Add module quickdoc (PY-166). Add tests.

--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -12,6 +12,7 @@ ACT.NAME.add.import=Add import
 ACT.NAME.use.import=Find in imported modules
 
 ACT.CMD.use.import=Use an imported module
+ACT.qualify.with.module=Qualify with an imported module
 
 ### Quick fixes ###
 QFIX.add.parameter.self=Add parameter 'self'
@@ -106,6 +107,10 @@ PARSE.expected.statement.break=Statement break expected
 PARSE.expected.@.or.def='@' or 'def' expected
 PARSE.expected.formal.param.name=formal parameter name expected
 
+### qiuck doc generator
+QDOC.copied.from.$0.$1=<i>Documentation is missing.</i> The following if copied from <code>{0}.{1}</code>.
+QDOC.copied.from.builtin=<small>(copied from built-in description)</small>
+
 ### unittest run configuration
 runcfg.unittest.display_name=Python's unittest
 runcfg.unittest.description=Python's unittest run configuration
@@ -138,4 +143,3 @@ runcfg.labels.interpreter_options=Interpreter &options:
 runcfg.labels.working_directory=&Working directory:
 runcfg.captions.script_parameters_dialog=Enter script parameters
 runcfg.captions.interpreter_options_dialog=Enter interpreter options
-ACT.qualify.with.module=Qualify with an imported module
