use JUnit4 runner if possible

--- a/platform-resources_eng/src/messages/ExecutionBundle.properties
+++ b/platform-resources_eng/src/messages/ExecutionBundle.properties
@@ -111,7 +111,7 @@ junit.runing.info.terminated.label=Terminated
 junit.runing.info.assertion.tree.node=Assertion
 junit.runing.info.error.tree.node=Error
 junit.runing.info.ignored.label=Ignored
-junit.runing.info.ignored.console.message=Test ''{0}.{1}'' ignored.
+junit.runing.info.ignored.console.message=Test ''{0}.{1}'' ignored
 junit.runing.info.left.to.run.count.tree.node=Left: {0}
 junit.runing.info.failed.count.message=F:{0}
 junit.runing.info.errors.count.message=E:{0}
