--- a/plugins/testng/src/META-INF/plugin.xml
+++ b/plugins/testng/src/META-INF/plugin.xml
@@ -13,6 +13,7 @@
         <testFramework implementation="com.theoryinpractice.testng.util.TestNGUtil"/>
         <inspectionToolProvider implementation="com.theoryinpractice.testng.inspection.TestNGInspectionsToolProvider"/>
         <configurationType implementation="com.theoryinpractice.testng.configuration.TestNGConfigurationType"/>
+       <psi.referenceContributor implementation="com.theoryinpractice.testng.TestNGReferenceContributor"/>
         <intentionAction>
           <className>com.theoryinpractice.testng.intention.TestNGOrderEntryFix</className>
         </intentionAction>
@@ -30,11 +31,6 @@
         <implementation-class>com.theoryinpractice.testng.TestNGPlugin</implementation-class>
       </component>
     </application-components>
-    <project-components>
-        <component>
-            <implementation-class>com.theoryinpractice.testng.TestNGReferenceProvider</implementation-class>
-        </component>
-    </project-components>
     <change-notes>
         <![CDATA[
             <li>TESTNG-151 Final passing test result is not properly hidden
