facet-based run configurations actually sorta work now

--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -130,7 +130,8 @@ runcfg.unittest.dlg.test_class_title=Test class
 runcfg.unittest.dlg.test_method_title=Test method
 runcfg.unittest.dlg.folder_title=Tests folder:
 runcfg.unittest.no_valid_sdk=Please select a valid Python interpeter
-runcfg.unittest.no_sdk=Please, specify Python SDK
+runcfg.unittest.no_module_sdk=Please select a module with a valid Python SDK
+runcfg.unittest.no_sdk=Please specify Python SDK
 runcfg.unittest.dlg.select.folder.path=Select folder path:
 runcfg.unittest.dlg.select.script.path=Select script path:
 runcfg.unittest.dlg.interpreter_options_title=Interpreter options:
