Adds a basic inspection for unreachable code.

--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -63,6 +63,10 @@ INSP.unresolved.ref.$0.for.class.$1=Unresolved attribute reference ''{0}'' for c
 INSP.NAME.init.return=__init__ method that returns a value
 INSP.cant.return.value.from.init=Cannot return a value from __init__
 
+# PyUnreachableCodeInspection
+INSP.NAME.unreachable.code=Unreachable code
+INSP.unreachable.code=This code is unreachable
+
 ### Annotators ###
 ANN.deleting.none=deleting None
 ANN.assign.to.none=assignment to None
