--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -309,10 +309,12 @@ package.visible.field.display.name=Package-visible field
 package.visible.field.problem.descriptor=Package-visible field <code>#ref</code> #loc
 package.visible.inner.class.display.name=Package-visible inner class
 package.visible.inner.class.problem.descriptor=Package-visible inner class <code>#ref</code> #loc
+package.visible.inner.class.ignore.enum.option=Ignore package-visible inner enums
 protected.field.display.name=Protected field
 protected.field.problem.descriptor=Protected field <code>#ref</code> #loc
 protected.inner.class.display.name=Protected inner class
 protected.inner.class.problem.descriptor=Protected inner class <code>#ref</code> #loc
+protected.inner.class.ignore.enum.option=Ignore 'protected' inner enums
 public.field.display.name='public' field
 public.field.problem.descriptor='public' field <code>#ref</code> #loc
 public.field.ignore.enum.type.fields.option=Ignore 'public' fields of an enum type
