groovy code script macro

--- a/platform-resources_eng/src/messages/CodeInsightBundle.properties
+++ b/platform-resources_eng/src/messages/CodeInsightBundle.properties
@@ -312,6 +312,7 @@ macro.undescoresToSpaces.string=underscoresToSpaces(String)
 macro.descendant.classes.enum=descendantClassesEnum(String)
 macro.enum=enum(...)
 macro.expected.type=expectedType()
+macro.groovy.script=groovyScript("groovy code")
 macro.guess.element.type.of.container=guessElementType(Container)
 macro.iterable.component.type=iterableComponentType(ArrayOrIterable)
 macro.iterable.variable=iterableVariable()
