extract XPath configurable to separate extension

--- a/plugins/xpath/xpath-view/src/META-INF/plugin.xml
+++ b/plugins/xpath/xpath-view/src/META-INF/plugin.xml
@@ -108,6 +108,7 @@
       <category>XSLT</category>
     </intentionAction>
 
+    <applicationConfigurable implementation="org.intellij.plugins.xpathView.XPathConfigurable"/>
     <applicationConfigurable implementation="org.intellij.lang.xpath.xslt.impl.XsltConfigImpl$UIImpl" />
 
     <fileIconPatcher implementation="org.intellij.lang.xpath.xslt.impl.XsltIconProvider"/>
