--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1392,7 +1392,7 @@ refused.bequest.problem.descriptor=Method <code>#ref()</code> ignores defined me
 reqused.bequest.ignore.empty.super.methods.option=Ignore empty super methods (degrades performance of this inspection)
 ovetly.complex.boolean.expression.ignore.pure.conjunctions.and.disjunctions.option=Ignore pure conjunctions and disjunctions
 pointless.indexof.comparison.display.name=Pointless 'indexOf()' comparison
-pointless.indexof.comparison.always.true.problem.descriptor=<code>#ref</code> is always true
+pointless.indexof.comparison.always.true.problem.descriptor=<code>#ref</code> is always true #loc
 pointless.indexof.comparison.always.false.problem.descriptor=<code>#ref</code> is always false
 reuse.of.local.variable.problem.descriptor=Reuse of local variable <code>#ref</code> #loc
 button.remove=&Remove
@@ -1719,3 +1719,6 @@ constant.assert.condition.problem.descriptor=assert condition <code>#ref</code> 
 assert.with.side.effects.display.name='assert' statement with side effects
 assert.with.side.effects.problem.descriptor=<code>#ref</code> has side effects #loc
 method.count.ignore.getters.setters.option=&Ignore simple getter and setter methods
+orred.not.equal.expression.display.name=Identical reference in '!=' expression on both sides of '||' expression
+orred.not.equal.expression.problem.descriptor=<code>#ref</code> is always true #loc
+orred.not.equal.expression.quickfix=Change '||' to '&&'
