register RegExpLanguage pieces as extensions

--- a/RegExpSupport/src/META-INF/plugin.xml
+++ b/RegExpSupport/src/META-INF/plugin.xml
@@ -19,5 +19,10 @@
     <lang.documentationProvider language="RegExp" implementationClass="org.intellij.lang.regexp.RegExpDocumentationProvider"/>
     <completion.contributor implementation="org.intellij.lang.regexp.RegExpCompletionContributor"/>
     <fileTypeFactory implementation="org.intellij.lang.regexp.RegExpSupportLoader" />
+    <annotator language="RegExp" implementationClass="org.intellij.lang.regexp.validation.RegExpAnnotator"/>
+    <lang.parserDefinition language="RegExp" implementationClass="org.intellij.lang.regexp.RegExpParserDefinition"/>
+    <lang.syntaxHighlighterFactory key="RegExp" implementationClass="org.intellij.lang.regexp.RegExpSyntaxHighlighterFactory"/>
+    <lang.braceMatcher language="RegExp" implementationClass="org.intellij.lang.regexp.RegExpBraceMatcher"/>
+    <lang.surroundDescriptor language="RegExp" implementationClass="org.intellij.lang.regexp.surroundWith.SimpleSurroundDescriptor"/>
   </extensions>
 </idea-plugin>
