IDEADEV-37762 (Inspection that warns about Class.newInstance() with quickfix to convert to Class.getContstructor().newInstance())

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -1722,3 +1722,6 @@ method.count.ignore.getters.setters.option=&Ignore simple getter and setter meth
 orred.not.equal.expression.display.name=Identical reference in '!=' expression on both sides of '||' expression
 orred.not.equal.expression.problem.descriptor=<code>#ref</code> is always true #loc
 orred.not.equal.expression.quickfix=Change '||' to '&&'
+class.new.instance.display.name=Unsafe call to 'Class.newInstance()'
+class.new.instance.problem.descriptor=Call to <code>#ref()</code> may throw undeclared checked exceptions
+class.new.instance.quickfix=Replace with 'Class.getConstructor().newInstance()' call
