--- a/plugins/svn4idea/src/org/jetbrains/idea/svn/SvnBundle.properties
+++ b/plugins/svn4idea/src/org/jetbrains/idea/svn/SvnBundle.properties
@@ -611,3 +611,4 @@ action.mark.tree.conflict.resolved.text=Mark Tree Conflict Resolved...
 action.mark.tree.conflict.resolved.confirmation.text=Do you want to mark tree conflict as resolved?
 action.mark.tree.conflict.resolved.confirmation.title=Mark Tree Conflict Resolved
 svn.integrate.changelist.warning.unresolved.conflicts.text=Integration interrupted. There are unresolved conflicts.
+svn.option.ignore.whitespace.in.annotate=Ignore whitespace differencies in annotations
