Enhanced assignment target annotator (closes PY-172 and some similar issues). Added a test.

--- a/python/src/com/jetbrains/python/PyBundle.properties
+++ b/python/src/com/jetbrains/python/PyBundle.properties
@@ -67,6 +67,10 @@ INSP.cant.return.value.from.init=Cannot return a value from __init__
 INSP.NAME.unreachable.code=Unreachable code
 INSP.unreachable.code=This code is unreachable
 
+# PyMethodFirstArgAssignmentInspection
+INSP.NAME.first.arg.assign=Reassignment of method's first argument
+INSP.first.arg.$0.assigned=Method''s parameter ''{0}'' reassigned 
+
 ### Annotators ###
 ANN.deleting.none=deleting None
 ANN.assign.to.none=assignment to None
@@ -82,6 +86,7 @@ ANN.cant.aug.assign.to.list.or.comprh=augmented assign to list literal or compre
 ANN.cant.assign.to.comprh=assign to list comprehension not possible
 ANN.cant.aug.assign.to.comprh=augmented assign to list comprehension not possible
 ANN.cant.assign.to.literal=can't assign to literal
+ANN.cant.delete.literal=can't delete literal
 ANN.cant.assign.to.lambda=can't assign to lambda
 
 ANN.break.outside.loop='break' outside loop
