JUnit UI redesign, part 4: "rerun failed tests" button moved to proper place

--- a/platform-resources_eng/src/messages/ActionsBundle.properties
+++ b/platform-resources_eng/src/messages/ActionsBundle.properties
@@ -1142,7 +1142,7 @@ group.CommanderViewPopupMenu.text=Commander View Popup Menu
 group.NavbarPopupMenu.text=Navigation Bar
 action.NewInspectionsInLatestVersion.text=What's new in IDEA 8
 action.NewInspectionsInLatestVersion.description=Show inspections new in IDEA 8
-action.RerunFailedTests.text=Rerun failed tests
+action.RerunFailedTests.text=Rerun Failed Tests
 action.RerunFailedTests.description=Run only tests that failed/crashed after last run
 group.AnalyzeJavaMenu.text=Analyze Java Menu
 group.AnalyzeJavaMenu.description=Analyze Java Menu
