--- a/plugins/maven/src/main/resources/ProjectBundle.properties
+++ b/plugins/maven/src/main/resources/ProjectBundle.properties
@@ -10,6 +10,11 @@ maven.resolving.pom=Resolving dependencies of {0}
 maven.updating.folders=Generating sources
 maven.updating.folders.finished=Finished Generating sources
 maven.updating.folders.pom=Generating sources for {0}
+maven.downloading.plugins=Downloading plugins
+maven.downloading.pom.plugins=Downloading plugins for {0}
+maven.downloading=Downloading sources and javadocs
+maven.downloading.finished=Finished downloading artifacts
+maven.downloading.artifact=Downloading {0}
 maven.transfer.progress={0}/{1}K  [{2}] {3}
 maven.transfer.start=Checking [{0}] {1}
 
@@ -20,12 +25,7 @@ maven.project.reimport=Re-import
 maven.project.importing=Importing Maven projects
 maven.project.importing.finished=Finished importing Maven projects
 maven.project.import.waiting.for.active.process=Waiting for an active process...
-maven.downloading=Downloading sources and javadocs
-maven.downloading.finished=Finished downloading artifacts
-maven.downloading.artifact=Downloading {0}
 maven.post.processing=Configuring additional components...
-
-maven.downloading.plugins=Downloading plugins
 
 module.group.name={0} and modules
 
