--- a/plugins/xpath/xpath-view/src/META-INF/plugin.xml
+++ b/plugins/xpath/xpath-view/src/META-INF/plugin.xml
@@ -123,6 +123,7 @@
     <treeStructureProvider implementation="org.intellij.lang.xpath.xslt.impl.XsltTreeStructureProvider"/>
 
     <psi.referenceContributor implementation="org.intellij.lang.xpath.xslt.impl.XsltReferenceContributor"/>
+    <standardResourceProvider implementation="org.intellij.lang.xpath.xslt.impl.XsltResourceProvider"/>
   </extensions>
 
   <extensions defaultExtensionNs="XPathView">
