--- a/platform-resources_eng/src/messages/UsageView.properties
+++ b/platform-resources_eng/src/messages/UsageView.properties
@@ -58,3 +58,8 @@ usage.type.write=Value write
 preview.title=<html>\\&nbsp;\\&nbsp;\\&nbsp;Preview\\&nbsp;<b>{0}</b>:\\&nbsp;<br><br>
 preview.usages.action.text=Preview Usages
 select.the.usage.to.preview=Select the usage to preview
+usages.were.filtered.out={0,choice, 1#The usage was|2#{0,number} usages were} filtered out
+show.usages.only.usage=It''s the only usage in {0}
+all.usages.are.in.this.line=All {0} usages in {1} are in this line
+no.usages.found.in=No usages found in {0}
+some.usages.found=({0,choice, 1#1 usage|2#{0,number} usages} found)
