'class initializer may be static' inspection, enabled by default.

--- a/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -666,6 +666,7 @@ unconstructable.test.case.display.name=Unconstructable JUnit TestCase
 volatile.long.or.double.field.display.name=Volatile long or double field
 string.buffer.must.have.initial.capacity.display.name=StringBuffer or StringBuilder without initial capacity
 method.may.be.static.display.name=Method may be 'static'
+class.initializer.may.be.static.display.name=Class initializer may be 'static'
 nested.switch.statement.display.name=Nested 'switch' statement
 c.style.array.declaration.display.name=C-style array declaration
 final.method.in.final.class.display.name='final' method in 'final' class
@@ -1026,6 +1027,7 @@ object.allocation.in.loop.problem.descriptor=Object allocation <code>#ref</code>
 instantiating.object.to.get.class.object.problem.descriptor=Instantiating object to get Class object #loc
 field.may.be.static.problem.descriptor=Field <code>#ref</code> may be 'static' #loc
 method.may.be.static.problem.descriptor=Method <code>#ref()</code> may be 'static' #loc
+class.initializer.may.be.static.problem.descriptor=Class initializer may be 'static' #loc
 map.replaceable.by.enum.map.problem.descriptor=<code>#ref</code> replaceable with EnumMap #loc
 set.replaceable.by.enum.set.problem.descriptor=<code>#ref</code> replaceable with EnumSet #loc
 inner.class.may.be.static.problem.descriptor=Inner class <code>#ref</code> may be 'static' #loc
