--- a/plugins/maven/src/main/resources/ProjectBundle.properties
+++ b/plugins/maven/src/main/resources/ProjectBundle.properties
@@ -22,7 +22,7 @@ maven.project.pom.file.has.been.changed=The pom.xml has been changed.
 
 maven.project.import=Import
 maven.project.reimport=Re-import
-maven.project.importing=Importing Maven projects
+maven.project.importing=Importing Maven projects...
 maven.project.importing.finished=Finished importing Maven projects
 maven.project.import.waiting.for.active.process=Waiting for an active process...
 maven.post.processing=Configuring additional components...
