--- a/platform-resources_eng/src/misc/registry.properties
+++ b/platform-resources_eng/src/misc/registry.properties
@@ -13,6 +13,9 @@ ide.debugMode=true
 ide.debugMode.description=Record additonal information to make bug reports more informative
 ide.forcedShowTooltip=alt
 ide.forcedShowTooltip.description=Shortcut for forced show tooltip
+ide.tree.yeildingUiUpdate=false
+ide.tree.showBusyIndicator=false
+ide.tree.waitForReadyTimout=250
 debugger.valueTooltipAutoShow=true
 debugger.valueTooltipAutoShow.description=Auto show tooltip on mouse over
 
