--- a/plugins/maven/src/main/resources/TasksBundle.properties
+++ b/plugins/maven/src/main/resources/TasksBundle.properties
@@ -1,3 +1,4 @@
+maven.tasks.before.run.empty=Run Maven Goal
 maven.tasks.before.run=Run Maven Goal ''{0}''
 maven.tasks.before.run.action=Execute Goal Before Run/Debug
 maven.tasks.goal.before.compile=Before Make
