AntInspectionToolProvider extracted to separate class

--- a/plugins/ant/src/META-INF/plugin.xml
+++ b/plugins/ant/src/META-INF/plugin.xml
@@ -35,6 +35,7 @@
     <declarationRangeHandler key="com.intellij.lang.ant.psi.AntStructuredElement"
                              implementationClass="com.intellij.lang.ant.AntDeclarationRangeHandler"/>
     <refactoring.elementListenerProvider implementation="com.intellij.lang.ant.refactoring.AntTargetRenameListenerProvider"/>
+    <inspectionToolProvider implementation="com.intellij.lang.ant.AntInspectionToolProvider"/>
   </extensions>
 
   <application-components>
